[package]
name = "nature_db"
version = "0.0.1"
authors = ["XueBin Li"]
edition = "2018"
workspace = "../Nature"

[dependencies]


nature_common = {path = "../Nature-Common"}

rand = "0.6"
chrono = { version = "0.4", features = ["serde"] }
lru_time_cache = "0.8"
lazy_static = "1.0"
uuid = { version = "0.7", features = ["v4"] }


serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

# db
diesel = { version = "1.4", default-features = false, features = ["sqlite","chrono","mysql"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"

log = "0.4"

[features]
mysql = []
sqlite = []

