[package]
name = "nature_db"
version = "0.5.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
workspace = "../Nature"

description = "The persistent layer which used by Nature"
repository = "https://github.com/llxxbb/Nature-DB"
license = "MIT"

[dependencies]

nature_common = {path = "../Nature-Common", version = "0.5.0"}

rand = "0.7"
chrono = { version = "0.4", features = ["serde"] }
lru_time_cache = "0.10"
lazy_static = "1.0"
uuid = { version = "0.8", features = ["v4"] }


serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

# db
diesel = { version = "1.4", default-features = false, features = ["sqlite","chrono","mysql"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"

# log
log = "0.4"
fern = "0.6"        # Simple, efficient logging

[features]
default = ["mysql"]
mysql = []
sqlite = []

