[package]
name = "nature_db"
version = "0.13.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
workspace = "../Nature"

description = "The persistent layer which used by Nature"
repository = "https://github.com/llxxbb/Nature-DB"
license = "MIT"

[dependencies]

nature_common = {path = "../Nature-Common", version = "0.13.0"}

chrono = { version = "0.4", features = ["serde"] }
lru_time_cache = "0.10"
lazy_static = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "0.2", features = ["full"] }
async-trait="0.1"

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

# db
mysql_async = "0.23"

# log
log = "0.4"
fern = "0.6"        # Simple, efficient logging

[features]
default = ["mysql"]
mysql = []
sqlite = []

